[gd_scene load_steps=3 format=3 uid="uid://c72f7nnnecppa"]

[ext_resource type="Script" path="res://inventory_container/equipment_slot.gd" id="1_raroj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6no0"]
resource_local_to_scene = true
size = Vector2(200, 150)

[node name="EquipmentSlot" type="ColorRect"]
custom_minimum_size = Vector2(200, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -376.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.129412, 0.129412, 0.129412, 1)
script = ExtResource("1_raroj")
normal_color = Color(0.129412, 0.129412, 0.129412, 1)
focus_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="InventoryArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryArea"]
position = Vector2(100, 75)
shape = SubResource("RectangleShape2D_v6no0")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "SLOT"

[connection signal="resized" from="." to="." method="_on_resized" flags=18]
[connection signal="mouse_entered" from="InventoryArea" to="." method="_on_inventory_area_mouse_entered"]
[connection signal="mouse_exited" from="InventoryArea" to="." method="_on_inventory_area_mouse_exited"]
